# s-graffito

./: .gitignore  README.md  _config.yml
_layouts/: default.html
query-processor/: Cargo.toml  README.md
query-processor/config/: ldbc-table1-equivelant.json  ldbc-table1.json  so-table1-equivelant.json  so-table1.json
query-processor/examples/: dd-runner.rs  parser.rs  sga-runner.rs
query-processor/examples/graph/: test_q3.txt  test_reachability.txt
query-processor/scripts/: result-aggregator.py  test-runner.py
query-processor/src/: lib.rs
query-processor/src/graph/: alphabet.rs  mod.rs
query-processor/src/input/: mod.rs  tuple.rs
query-processor/src/operator/: delta.rs  hash_join.rs  mod.rs  rpq.rs  spanning_tree.rs  tree_node.rs  window.rs
query-processor/src/query/: mod.rs  query_library.rs
query-processor/src/query/automata/: dfa.rs  mod.rs  nfa.rs
query-processor/src/query/parser/: mod.rs  rpq.pest
query-processor/src/util/: mod.rs  types.rs
query-processor/src/util/metrics/: csv_builder.rs  csv_exporter.rs  mod.rs
