[package]
name = "sgraffito-query"
version = "0.1.0"
authors = ["Anil Pacaci <apacaci@uwaterloo.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timely = "0.11"
differential-dataflow = "0.11"
abomonation = "0.7"
abomonation_derive = "0.5"
csv = "1.1"
env_logger = "0.7.1"
futures = { version = "0.3.*" }
hashers = "1.0.1"
hashbrown = "0.9.1"
hdrhistogram = "7.2.0"
itertools = "0.9"
log = "0.4.11"
metrics-runtime = "0.13.1"
metrics-core = "0.5.2"
metrics-util = "0.14.0"

pest = "2.1"
pest_derive = "2.1"
priority-queue = "1.0.2"
strum = "0.15.0"
strum_macros = "0.15.0"

[dev-dependencies]
rand="0.4"

[profile.release]
debug =  true

[[bin]]
name = "sgraffito-query"
path = "src/main.rs"
bench = false
